--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>Contact - Nicholas Lai</title>
     <link rel="stylesheet href="styles.css">
 </head>
+<h1> work in progress don't judge plz </h1>
 <body>
     <div class="container">
         <a href="index.html">About</a>
