--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>About Me - Nicholas Lai</title>
     <link rel="stylesheet href="styles.css">
 </head>
-<h1> work in progress don't judge plz </h1>
+<h1> So you care this much about me that you'll click my website eh? </h1>
 <body>
     <div class="container">
         <div class="nav.wrapper">
