--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact - Nicholas Lai</title>
     <link rel="stylesheet href="styles.css">
 </head>
-<h1> work in progress don't judge plz </h1>
+<h1> So you care this much about me that you'll click my website eh? </h1>
 <body>
     <div class="container">
         <a href="index.html">About</a>
