--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>About Me - Nicholas Lai</title>
-    <link rel="stylesheet href="styles.css">
+<title>About Me | Nicholas Lai</title>
 </head>
-<h1> So you care this much about me that you'll click my website eh? </h1>
-<body>
-    <div class="container">
-        <div class="nav.wrapper">
-            <a href="index.html">About</a>
-            <a href="contact.html">Contact</a>
+<body style="background-color:lightslategray;">
 
-            <div> Nicholas Lai </div>
-        </div>
-    </div>
-    <h2>About Me</h2>
-    <p>
-        Hi there! My name is Nicholas Lai and I'm from Toronto, Canada. I'm currently a second year Computer Science student at the University of Western Ontario .
-    </p>
+<h1><strong>Welcome To My Website</strong></h1>
+<p>Hi! I'm Nicholas Lai. I'm currently a second year computer science student at the University of Western Ontario. Based in the Greater Toronto Area.</p>
+<p>In my spare time, I like to watch movies, play guitar, and read books.</p>
+
+
+<a href="mailto: nicholaslhlai@gmail.com" target="_blank">Email</a>
+<a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank">LinkedIn</a>
+<a href="https://github.com/nlai86" target="_blank">github</a>
+
+
 </body>
 </html>
