--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Nicholas Lai | Personal Site</title>
         <script src="https://kit.fontawesome.com/f7c7b083c6.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <!-- About me -->
