--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Nicholas Lai | Personal Site</title>
-        <script src="https://kit.fontawesome.com/f7c7b083c6.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/f7c7b083c6.js" crossorigin="anonymous"></script> 
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- About me -->
@@ -38,6 +40,7 @@
             <p> Created by Nicholas Lai </p>
             <p> Updated: January 2021 </p>
         </div>
+
     </body>
 
 </html>
