--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Nicholas Lai | Personal Site</title>
         <script src="https://kit.fontawesome.com/f7c7b083c6.js" crossorigin="anonymous"></script> 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
@@ -33,9 +33,9 @@
         <!-- Footer-->
         <div class="footer"> 
             <ul>
-                <li><a href="mailto: nicholaslhlai@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/nicholaslhlai/"><i class="fab fa-github-square"></i></a></li>
-                <li><a href="https://github.com/nlai86"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="mailto: nicholaslhlai@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank"><i class="fab fa-github-square"></i></a></li>
+                <li><a href="https://github.com/nlai86" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
             <p> Created by Nicholas Lai </p>
             <p> Updated: January 2021 </p>
