--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="footer"> 
             <ul>
                 <li><a href="mailto: nicholaslhlai@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank"><i class="fab fa-github-square"></i></a></li>
-                <li><a href="https://github.com/nlai86" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/nlai86" target="_blank"></a><i class="fab fa-github-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
             <p> Created by Nicholas Lai </p>
             <p> Updated: January 2021 </p>
