--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Nicholas Lai | Personal Site</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://kit.fontawesome.com/f7c7b083c6.js" crossorigin="anonymous"></script> 
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
