--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
     <div class="bio" id="about-section">
         <div class="image"></div>
         <div class="bio-text">
-            <h1>Hi, I'm Nicholas, a third year computer science student at Western University.</h1>
-            <p> I have always been passionate about bringing new ideas to fruition and that is what drew to me computer science. 
-                I wish to be able to contribute to new innovations and am hungry to learn. Currently looking for an internship for 2022. 
+            <h1>Hi, my name is Nicholas.</h1>
+            <p> 
+                I am currently a third year Computer Science student at Western University in London, Ontario.
+                I am passionate about bringing ideas to fruition and aim to do that through using my technical skills that 
+                I have acquired through school and my own experimentation. 
+ 
             </p>
 
             <p> 
-                In my spare time, I like to play guitar, watch movies, and do judo. 
-
+                In addition to working with computers, I like to play guitar, experiment with music production, binge-watch movies,
+                and live an active lifestyle through working out and learning martial arts.  
             </p>
+
+            <p>Currently looking for an internship for 2022.</p>
         </div>
     </div>
     <div class="projects">
