--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 </head>
 
 <body>
-    <nav id="navbar">   
-        <ul class="nav-buttons" id = "menu"> 
-            <li><a href="#about-section">About</a></li>
-            <li><a href="#projects-section">Projects</a></li>
-        </ul>
-        <ul class="buttons">
-            <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank" class="cbutton"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-            <li><a href="https://github.com/nlai86" target="_blank" class="cbutton"><i class="fa fa-github-square fa-2x"></i></a></li>
-            <li><a href="mailto: nicholaslhlai.com" target="_blank" class="cbutton"><i class="fa fa-envelope fa-2x"></i></a></li>
-        </ul>
-
-    </nav>
-
+    <header>
+        <nav id="navbar">   
+            <ul class="nav-buttons" id = "menu"> 
+                <li><a href="#about-section">About</a></li>
+                <li><a href="#projects-section">Projects</a></li>
+            </ul>
+            <ul class="buttons">
+                <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank" class="cbutton"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li><a href="https://github.com/nlai86" target="_blank" class="cbutton"><i class="fa fa-github-square fa-2x"></i></a></li>
+                <li><a href="mailto: nicholaslhlai.com" target="_blank" class="cbutton"><i class="fa fa-envelope fa-2x"></i></a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="bio" id="about-section">
         <div class="image"></div>
         <div class="bio-text">
@@ -49,7 +49,7 @@
                 and live an active lifestyle through working out and learning martial arts.  
             </p>
 
-            <p>Currently looking for an internship for 2022.</p>
+            <p id="internship">Currently looking for an internship for 2022.</p>
         </div>
     </div>
     <div class="projects">
