--- a/index.html
+++ b/index.html
@@ -1,79 +1,109 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Nicholas Lai</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="icon" href="Images/me_pic1_circle.png">
-    <script src='main.js'></script>
-
-    <!---Font for Buttons (Ubuntu)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    
-    <!--font awesome-->
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
-<body>
-    <header>
-        <nav id="navbar">   
-            <ul class="nav-buttons" id = "menu"> 
-                <li><a href="#about-section">About</a></li>
-                <li><a href="#projects-section">Projects</a></li>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- CSS Styles -->
+        <link rel="stylesheet" href="styles.css">
+        <!-- Favicon -->
+        <link rel="icon" href="Images/me_pic1_circle.png">
+        <!-- Animate CSS CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
+        <!-- Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+        <!-- Icons -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>Nicholas Lai</title>
+    </head>
+    <body>
+         <!-- Navbar -->
+        <nav>
+            <h1>Nicholas Lai</h1>
+            <ul class="navbar">
+                <li><a href="#about" class="nav-link">About</a></li>
+                <!--
+                <li><a href="#projects" class="nav-link">Projects</a></li>  -->
+                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <ul class="buttons">
-                <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank" class="cbutton"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                <li><a href="https://github.com/nlai86" target="_blank" class="cbutton"><i class="fa fa-github-square fa-2x"></i></a></li>
-                <li><a href="mailto: nicholaslhlai.com" target="_blank" class="cbutton"><i class="fa fa-envelope fa-2x"></i></a></li>
-            </ul>
+            <button class="burger-menu" id="burger-menu">
+                <ion-icon class="bars" name="menu-outline"></ion-icon>
+            </button>
         </nav>
-    </header>
-    <div class="bio" id="about-section">
-        <div class="image"></div>
-        <div class="bio-text">
-            <h1>Hi, my name is Nicholas.</h1>
-            <p> 
-                I am currently a third year Computer Science student at Western University in London, Ontario.
-                I am passionate about bringing ideas to fruition and aim to do that through using my technical skills that 
-                I have acquired through school and my own experimentation. 
- 
+        <!-- About -->
+        <section class="hero" id="about">
+            <div class="bio animeate__animated animate__shakeX">
+                <h2 class="bio-title">Hi, my name is Nicholas.</h2>
+                <p class="bio-text">
+                    I am third year Computer Science student at Western University in London, Ontario. I am passionate about bringing ideas to fruition and aim to do
+                    that through using my technical skills that I have acquired through school and my own experimentation. 
+                </p>
+
+                <p>
+                    In addition to working with computers, 
+                    I like to play guitar, experiment with music production, binge-watch movies, and live an active lifestyle through working out and learning martial arts.
+                </p>
+
+                <p id="currently">
+                    Currently looking for an internship for 2022.
+                </p>
+
+            </div>
+            <img src="Images/me_pic2_rounded.png" alt="nicholas-lai" loading="lazy" class="hero-img"/>
+
+        </section>
+        <!-- Projects -->
+        <!--
+            <section class="projects" id="projects">
+                <h2 class="projects-title">Projects</h2>
+                <p>Work in progress...</p>
+            </section>  -->
+        <!-- Contact -->
+            <section class="contact" id="contact">
+                <h2>Get in Touch With Me</h2>
+                <div>
+                    <ul class="buttons">
+                        <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank" class="cbutton"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                        <li><a href="https://github.com/nlai86" target="_blank" class="cbutton"><i class="fa fa-github-square fa-2x"></i></a></li>
+                        <li><a href="mailto: nicholaslhlai.com" target="_blank" class="cbutton"><i class="fa fa-envelope fa-2x"></i></a></li>
+                    </ul>
+                </div>
+            </section>
+        <!-- Footer -->
+
+        <footer> 
+            <p>
+                Designed and Developed by Nicholas Lai 
             </p>
-
-            <p> 
-                In addition to working with computers, I like to play guitar, experiment with music production, binge-watch movies,
-                and live an active lifestyle through working out and learning martial arts.  
+            <p>
+                Last Updated: April 2022
             </p>
+        </footer>
 
-            <p id="internship">Currently looking for an internship for 2022.</p>
-        </div>
-    </div>
-    <div class="projects">
-        <h1 id="projects-section">Projects</h1>
-        <p>Work in progress...</p>
-    </div> 
+        <!-- Website scripts -->
+        <script src="assets/js/app.js"></script>
 
-</body>
-
-
+        <!-- Ion icons scripts -->
+        <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+         ></script>
+        <script
+            nomodule
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+         ></script>
+    </body>
 
 </html>
 
 
-<script>
-    var navbar = document.getElementById("navbar");
-    var menu = document.getElementById("menu");
 
-    window.onscroll = function (){
-        if (window.pageYOffset >= menu.offsetTop) {
-            navbar.classList.add("sticky");
-        } 
-        else {
-            navbar.classList.remove("sticky");
-        }
-    }
-</script>>
+
+
+
+
+
+
+
