--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="bio animeate__animated animate__shakeX">
                 <h2 class="bio-title">Hi, my name is Nicholas.</h2>
                 <p class="bio-text">
-                    I am third year Computer Science student at Western University in London, Ontario. I am passionate about bringing ideas to fruition and aim to do
+                    I am a third year Computer Science student at Western University in London, Ontario. I am passionate about bringing ideas to fruition and aim to do
                     that through using my technical skills that I have acquired through school and my own experimentation. 
                 </p>
 
