--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </footer>
 
         <!-- Website scripts -->
-        <script src="assets/js/app.js"></script>
+        <script src="app.js"></script>
 
         <!-- Ion icons scripts -->
         <script
