--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- CSS Styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Favicon -->
-        <link rel="icon" href="Images/me_pic1_circle.png">
+        <link rel="icon" href="Images/me_pic1_circle.jpg">
         <!-- Animate CSS CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
         <!-- Fonts-->
@@ -51,7 +51,7 @@
                 </p>
 
             </div>
-            <img src="Images/me_pic2_rounded.png" alt="nicholas-lai" loading="lazy" class="hero-img"/>
+            <img src="Images/me_pic2_rounded.jpg" alt="nicholas-lai" loading="lazy" class="hero-img"/>
 
         </section>
         <!-- Projects -->
