--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- CSS Styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Favicon -->
-        <link rel="icon" href="Images/me_pic1_circle.jpg">
+        <link rel="icon" href="Images/me_pic1_circle.png">
         <!-- Animate CSS CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
         <!-- Fonts-->
