--- a/index.html
+++ b/index.html
@@ -16,84 +16,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
         <!-- Icons -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Nicholas Lai</title>
+        <title>nicholas lai</title>
     </head>
     <body>
-         <!-- Navbar -->
-        <nav>
-            <h1>Nicholas Lai</h1>
-            <ul class="navbar">
-                <li><a href="#about" class="nav-link">About</a></li>
-                <!--
-                <li><a href="#projects" class="nav-link">Projects</a></li>  -->
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-            <button class="burger-menu" id="burger-menu">
-                <ion-icon class="bars" name="menu-outline"></ion-icon>
-            </button>
-        </nav>
-        <!-- About -->
-        <section class="hero" id="about">
-            <div class="bio animeate__animated animate__shakeX">
-                <h2 class="bio-title">Hi, my name is Nicholas.</h2>
-                <p class="bio-text">
-                    I am a Fourth year Computer Science student at Western University in London, Ontario. I am passionate about bringing ideas to fruition and aim to do
-                    that through using my technical skills that I have acquired through school and my own experimentation. 
-                </p>
-
-                <p>
-                    In addition to working with computers, 
-                    I like to play guitar, experiment with music production, binge-watch movies, and live an active lifestyle through working out and learning martial arts.
-                </p>
-
-                <p id="currently">
-                    Currently looking for an internship for Fall 2022.
-                </p>
-
-            </div>
-            <img src="Images/me_pic2_rounded.jpg" alt="nicholas-lai" loading="lazy" class="hero-img"/>
-
-        </section>
-        <!-- Projects -->
-        <!--
-            <section class="projects" id="projects">
-                <h2 class="projects-title">Projects</h2>
-                <p>Work in progress...</p>
-            </section>  -->
-        <!-- Contact -->
-            <section class="contact" id="contact">
-                <h2>Get in Touch With Me</h2>
-                <div>
-                    <ul class="buttons">
-                        <li><a href="https://www.linkedin.com/in/nicholaslhlai/" target="_blank" class="cbutton"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                        <li><a href="https://github.com/nlai86" target="_blank" class="cbutton"><i class="fa fa-github-square fa-2x"></i></a></li>
-                        <li><a href="mailto: nicholaslhlai.com" target="_blank" class="cbutton"><i class="fa fa-envelope fa-2x"></i></a></li>
+        <div class="main-container">
+            <header>
+                <h1 id="name">nicholas lai</h1>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
-                </div>
-            </section>
-        <!-- Footer -->
+                </nav>
+            </header>
+        </div>
 
-        <footer> 
-            <p>
-                Designed and Developed by Nicholas Lai 
-            </p>
-            <p>
-                Last Updated: May 2022
-            </p>
-        </footer>
-
-        <!-- Website scripts -->
-        <script src="app.js"></script>
-
-        <!-- Ion icons scripts -->
-        <script
-            type="module"
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-         ></script>
-        <script
-            nomodule
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-         ></script>
     </body>
 
 </html>
