save monochrome progress

--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- CSS Styles -->
-        <link rel="stylesheet" href="styles.css">
-        <!-- Favicon -->
-        <link rel="icon" href="Images/me_pic1_circle.png">
-        <!-- Animate CSS CDN -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
-        <!-- Fonts-->
+        <link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
+        rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.jpg">
+        <link rel="stylesheet" href="styles.css">
         <!-- Icons -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>nicholas lai</title>
     </head>
     <body>
         <div class="main-container">
-            <header>
+            <header>    
                 <h1 id="name">nicholas lai</h1>
-                <nav class="menu">
-                    <ul>
+                <nav>
+                    <ul class="menu">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Resume</a></li>
@@ -31,6 +31,12 @@
                     </ul>
                 </nav>
             </header>
+            <div class="bio">   
+                <h1>hi, i'm nicholas lai.</h1>
+            </div>  
+            <div class="portrait">
+                <img src="images/Nicholas Photoshop.jpg" alt="Photo of Nicholas Lai">
+            </div>
         </div>
 
     </body>
